feat: pass the verify of the text dection